# clearly

./: PRIVACY.md  README.md  RELEASE.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
docs/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.xml.template
src-tauri/src/: lib.rs  main.rs
src/components/Editor/: Editor.tsx  editorTheme.css
src/components/Editor/plugins/: mermaidPlugin.ts
src/components/FileSearch/: FileSearch.css  FileSearch.tsx
src/components/SearchReplace/: SearchReplace.css  SearchReplace.tsx
src/components/Sidebar/: FileTree.tsx  Sidebar.css  Sidebar.tsx  useFileTree.ts
src/components/StatusBar/: StatusBar.css  StatusBar.tsx
src/components/Titlebar/: Titlebar.css  Titlebar.tsx
src/components/UpdateBanner/: UpdateBanner.css  UpdateBanner.tsx
src/hooks/: useExport.ts  useFileOperations.ts  useKeyboardShortcuts.ts  useUpdater.ts
src/stores/: appStore.ts
src/styles/: global.css  variables.css
